No longer needed forced visibility on top actions

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -644,10 +644,6 @@ td.cellSubDataTable .loadingPiwik {
     margin-top: -10px;
     margin-left: -10px;
 
-    .dataTableAction {
-      visibility: visible !important;
-    }
-
     #dashboardWidgetsArea .widget & {
       display: none;
     }
